Asteria/force-app/main/default/objects/Shuttle__c/Shuttle__c.object-meta.xml
<CustomObject>
    <description>Personnel-carrier ship that transports Crews to and from Mining Sites.</description>
    <label>Shuttle</label>
    <nameField>
        <label>Shuttle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shuttles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>