Asteria/force-app/main/default/objects/Shuttle__c/fields/Mining_Site__c.field-meta.xml
<CustomField>
    <fullName>Mining_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mining Site</label>
    <referenceTo>Mining_Site__c</referenceTo>
    <relationshipLabel>Shuttles</relationshipLabel>
    <relationshipName>Shuttles</relationshipName>
    <type>Lookup</type>
</CustomField>