Asteria/force-app/main/default/objects/Shuttle__c/fields/Mining_Site_List__c.field-meta.xml
<CustomField>
    <fullName>Mining_Site_List__c</fullName>
    <description>The Mining Sites services by this Shuttle.</description>
    <inlineHelpText>The Mining Sites services by this Shuttle.</inlineHelpText>
    <label>Mining Site</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mining_Site</valueSetName>
    </valueSet>
</CustomField>