Asteria/force-app/main/default/objects/Shuttle__c/fields/Mothership__c.field-meta.xml
<CustomField>
    <fullName>Mothership__c</fullName>
    <description>The Mothership where the Shuttle docks.</description>
    <inlineHelpText>The Mothership where the Shuttle docks.</inlineHelpText>
    <label>Mothership</label>
    <referenceTo>Mothership__c</referenceTo>
    <relationshipLabel>Shuttles</relationshipLabel>
    <relationshipName>Shuttles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>